# zero2prod

./: .gitignore  Cargo.toml
.github/workflows/: audit.yml  general.yml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
