[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Stephen Oduh <osobotu@gmail.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.14.0"
tokio = {version = "1", features=["macros", "rt-multi-thread"]}

[dev-dependencies]
reqwest = "0.11"
