[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Stephen Oduh <osobotu@gmail.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.14.0"
tokio = {version = "1", features=["macros", "rt-multi-thread"]}
serde = {version = "1", features=["derive"]}
config = "0.15.25"

[dependencies.sqlx]
version = "0.9.0"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.13"
